@@ -9,6 +9,7 @@ export(dist_pt2l)
 export(drop_poi)
 export(e2sIntersect)
 export(edgeAngles)
+export(edge_angles_valletta)
 export(edge_angles_vis2d)
 export(edge_angles_vis3d)
 export(edge_angles_yw)
